--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
@@ -38,4 +38,23 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="PopupWhiteFullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="InfoPopupTheme" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <style name="PopupTarjetaReal" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowMinWidthMajor">90%</item> <!-- ANCHO -->
+        <item name="android:windowMinWidthMinor">90%</item> <!-- LANDSCAPE -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
