--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -3,25 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffff">
 
     <!-- HEADER -->
     <include
-        android:id="@+id/include"
-        layout="@layout/toolbar_header" />
+        android:id="@+id/header"
+        layout="@layout/toolbar_header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- BOTTOM NAV (siempre fijo abajo) -->
-    <include layout="@layout/bottom_nav"/>
-
-    <Button
-        android:id="@+id/perfil"
+    <!-- CONTENEDOR CENTRADO -->
+    <LinearLayout
+        android:id="@+id/centerContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PERFIL (TEMPORAL)"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header">
+
+        <!-- LOGO -->
+        <ImageView
+            android:id="@+id/imgAtmos"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:contentDescription="Logo Atmos"
+            android:src="@drawable/logo_atmos_verde" />
+
+        <!-- TEXTO -->
+        <TextView
+            android:id="@+id/txtMantenimiento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="Página en mantenimiento\nPróximamente"
+            android:textColor="#059669"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <!-- MENU INFERIOR -->
+    <include
+        android:id="@+id/bottom_nav_container"
+        layout="@layout/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
