--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/menu_acciones.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/menu_acciones.xml
@@ -5,6 +5,13 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
 
+    <!-- =============================================================
+         HEADER SUPERIOR
+         ============================================================= -->
+    <include
+        android:id="@+id/header"
+        layout="@layout/toolbar_header"/>
+
     <!-- CONTENIDO SCROLLEABLE -->
     <ScrollView
         android:layout_width="match_parent"
