--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/toolbar_header.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/toolbar_header.xml
@@ -1,10 +1,17 @@
-<!-- res/layout/toolbar_header.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/toolbar_header"
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="@color/white"
-    android:elevation="4dp">
+    android:elevation="4dp"
+    android:title=""
+    android:subtitle=""
+    app:title=""
+    app:subtitle=""
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <RelativeLayout
         android:layout_width="match_parent"
