--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/values/styles.xml
@@ -57,4 +57,19 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+
+    <!-- TITULOS -->
+    <style name="TextoHeadline1">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/verde_principal</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
+    </style>
+
+    <!-- Párrafos -->
+    <style name="TextoParrafoPrincipal">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textoSecundario</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
+
 </resources>
