--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
@@ -175,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <!-- Estado del Sensor (IZQUIERDA) -->
+                        <!-- Estado del Sensor  -->
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
                             android:layout_height="200dp"
@@ -270,88 +270,6 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <!-- Promedio Día -->
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="200dp"
-                            android:layout_weight="1"
-                            app:cardCornerRadius="18dp"
-                            app:cardElevation="6dp"
-                            app:cardUseCompatPadding="true">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"
-                                android:gravity="center_horizontal"
-                                android:padding="16dp">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Promedio del Día"
-                                    android:textSize="14sp"
-                                    android:fontFamily="@font/roboto_bold"/>
-
-                                <TextView
-                                    android:id="@+id/tv_promedio_fecha"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="08/09/2025"
-                                    android:textSize="12sp"
-                                    android:textColor="#777"
-                                    android:layout_marginTop="3dp"/>
-
-                                <LinearLayout
-                                    android:orientation="horizontal"
-                                    android:gravity="center"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content">
-
-                                    <TextView
-                                        android:id="@+id/tv_promedio_valor"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="0.10"
-                                        android:textSize="36sp"
-                                        android:fontFamily="@font/roboto_bold"/>
-
-                                    <TextView
-                                        android:id="@+id/tv_promedio_gas"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="4dp"
-                                        android:text="NO₂ \nppm"
-                                        android:textSize="16sp" />
-                                </LinearLayout>
-
-                                <!-- Icono calidad promedio -->
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal"
-                                    android:gravity="center"
-                                    android:layout_marginTop="10dp">
-
-                                    <ImageView
-                                        android:id="@+id/img_promedio_calidad"
-                                        android:layout_width="16dp"
-                                        android:layout_height="16dp"
-                                        android:layout_marginEnd="4dp"
-                                        android:src="@drawable/ic_estado_bueno" />
-
-                                    <TextView
-                                        android:id="@+id/tv_promedio_calidad"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Buena"
-                                        android:textSize="14sp"/>
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
                         <!-- Última Medición -->
                         <androidx.cardview.widget.CardView
                             android:layout_width="0dp"
@@ -425,6 +343,88 @@
 
                                     <TextView
                                         android:id="@+id/tv_ultima_calidad"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Buena"
+                                        android:textSize="14sp"/>
+                                </LinearLayout>
+
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <!-- Promedio Día -->
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="0dp"
+                            android:layout_height="200dp"
+                            android:layout_weight="1"
+                            app:cardCornerRadius="18dp"
+                            app:cardElevation="6dp"
+                            app:cardUseCompatPadding="true">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:gravity="center_horizontal"
+                                android:padding="16dp">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Promedio del Día"
+                                    android:textSize="14sp"
+                                    android:fontFamily="@font/roboto_bold"/>
+
+                                <TextView
+                                    android:id="@+id/tv_promedio_fecha"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="08/09/2025"
+                                    android:textSize="12sp"
+                                    android:textColor="#777"
+                                    android:layout_marginTop="3dp"/>
+
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:id="@+id/tv_promedio_valor"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="0.10"
+                                        android:textSize="36sp"
+                                        android:fontFamily="@font/roboto_bold"/>
+
+                                    <TextView
+                                        android:id="@+id/tv_promedio_gas"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginStart="4dp"
+                                        android:text="NO₂ \nppm"
+                                        android:textSize="16sp" />
+                                </LinearLayout>
+
+                                <!-- Icono calidad promedio -->
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:gravity="center"
+                                    android:layout_marginTop="10dp">
+
+                                    <ImageView
+                                        android:id="@+id/img_promedio_calidad"
+                                        android:layout_width="16dp"
+                                        android:layout_height="16dp"
+                                        android:layout_marginEnd="4dp"
+                                        android:src="@drawable/ic_estado_bueno" />
+
+                                    <TextView
+                                        android:id="@+id/tv_promedio_calidad"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="Buena"
